// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render bold text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qdvl51-0 fEpNBI"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render regular text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qdvl51-0 diSxms"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render text with display content auto aligned when align prop is of value "inherit" 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qdvl51-0 iiFhHO"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render text with display content auto aligned when align prop is of value "initial" 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qdvl51-0 lkhzOh"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render text with display content center aligned 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qdvl51-0 iLluWI"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render text with display content right aligned 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qdvl51-0 gGzrEb"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render underlined text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qdvl51-0 iOmAwM"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;
